# 3-sem-project

./: .gitignore  CMakeL.txt  CMakeLists.txt  Makefile  PAsound  PAsound.cpp  PAsound.h  README.md  compile_commands.json  main.cpp  paex_sine copy 2.cpp  paex_sine copy.cpp  paex_sine.cpp
Audio/: PAsound.cpp  PAsound.h  RB3_cpp_publisher.h  SoundObject.h  consts.h  goertzel.cpp  goertzel.h  main.cpp  mainOnBoard.cpp  protocol.cpp  protocol.h
Computer/: CMakeLists.txt  ControllerPanel.cpp  ControllerPanel.h  app.cpp  main.cpp
Input/: receiver.cpp
Input analysis/: Makefile  compile_commands.json
Output/: PAsound.cpp  PAsound.h  compile_commands.json  main.cpp
Protocol/: CMakeLists.txt  PAsound.cpp  PAsound.h  SoundObject.h  consts.h  goertzel.cpp  goertzel.h  main.cpp  protocol.cpp  protocol.h
Robot/: RB3_cpp_publisher.h  mainOnBoard.cpp
Test/: Makefile  PAsound  PAsound.cpp  PAsound.h  compile_commands.json  main.cpp
Test/.cache/clangd/index/: PAsound.cpp.533484EEA5FEC2D5.idx  PAsound.h.97F5370546A37012.idx  main.cpp.2AD77B924EA72F74.idx
Tests/: CMakeLists.txt  oldmain.cpp
Tests/Audiofix/: audiofix.cpp
Tests/Cheng/: CMakeLists.txt  main.cpp
Tests/Convert-to-protocol/: main.cpp
Tests/Goertzel algorithm/: CMakeLists.txt  main.cpp
Tests/Goertzel-algorithm/: goertzel.cpp
Tests/Input analysis/: receiver.cpp
Tests/Make test samples/: CMakeLists.txt  main.cpp
Tests/Visual/: visual.cpp
Tests/convert/: CMakeLists.txt
Tests/float/: float.cpp
Tests/goertzel/: goert.cpp
Tests/protocol/: prot.cpp
